--- a/.github/workflows/bimbadabim.yml
+++ b/.github/workflows/bimbadabim.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Build Kernel, Modules and Device Trees
         run: |
-          make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- -j3 bcm2711_defconfig Image.gz modules dtbs
+          make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- -j ${{ env.NUM_JOBS }} bcm2711_defconfig Image.gz modules dtbs
 
       - name: Copy the Kernel Image
         run: |
@@ -43,7 +43,7 @@ jobs:
       - name: Copy the Modules
         run: |
           mkdir -p {{ env.ARTIFACTS_DIR }}
-          make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- INSTALL_MOD_PATH={{ env.MOD_TMP_DIR }} -j3 modules_install
+          make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- INSTALL_MOD_PATH={{ env.MOD_TMP_DIR }} -j ${{ env.NUM_JOBS }} modules_install
 
       - name: Create the Modules Initramfs
         run: |
